--- a/resources/assets/css/wp-kirk-common.scss
+++ b/resources/assets/css/wp-kirk-common.scss
@@ -38,7 +38,7 @@
     right: 0;
     padding: inherit 0;
     margin-top: 0.6rem !important;
-    background: hsla(0,0,100%,0.16);
+    background: rgba(255, 255, 255, 0.16);
     border-top: 1px solid rgba(250, 128, 114, .4);
     border-bottom: 1px solid rgba(250, 128, 114, .4);
     pointer-events: none;
